# deezmux

./: .gitignore  Cargo.toml  deezmux.alpine.singularity
src/: cli.yaml  fastq.rs  main.rs
